<resources>
    <string name="app_name">Beesness</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Accueil</string>
    <string name="title_statistics">Statistiques</string>
    <string name="title_plus">Plus</string>
    <string name="title_apiaries">Ruchers</string>
    <string name="title_market">Marché</string>
    <string name="qr_code_scanner">Scanner QR Code</string>
    <string name="menu">Menu</string>
    <string name="logo_beesness">Logo Beesness</string>
    <string name="main_info">Informations générales</string>
    <string name="initial_number">0</string>
    <string name="title_beehives">Ruches</string>
    <string name="honey_supers">Hausses</string>
    <string name="planning">Planning</string>
    <string name="health_checking">Contrôle sanitaire</string>
    <string name="heart">heart</string>
    <string name="health_events">À jour</string>
    <string name="feeding">Nourrissement</string>
    <string name="feed_events">À jour</string>
    <string name="harvesting">Récolte</string>
    <string name="harvest_events">À jour</string>
    <string name="account">Mon compte</string>
    <string name="logout">Déconnexion</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="connection">Connexion</string>
    <string name="email">Courriel</string>
    <string name="password">Mot de passe</string>
    <string name="forgot_password">Mot de passe oublié ?</string>
    <string name="connect">Se connecter</string>
    <string name="no_account">Vous n\'avez pas encore de compte ?</string>
    <string name="subscribe">Inscrivez-vous</string>
    <string name="subscription">Inscription</string>
    <string name="password_checking">Entrez à nouveau votre mot de passe</string>
    <string name="subscribed">S\'inscrire</string>
    <string name="lastname">Nom</string>
    <string name="firstname">Prénom</string>
    <string name="already_account">Vous avez déjà un compte ?</string>
    <string name="connected">Connectez-vous</string>
    <string name="forgotten_password">Mot de passe oublié</string>
    <string name="email_or_username">Courrier ou nom d\'utilisateur</string>
    <string name="send_link">Envoyer le lien de récupération</string>
    <string name="email_title">Email</string>
    <string name="mail_address">test@gmail.com</string>
    <string name="name">Nom</string>
    <string name="address">Adresse</string>
    <string name="beekeeper_number">Numéro d\'apiculteur</string>
    <string name="forename">Prénom</string>
    <string name="save">Sauvegarder</string>
    <string name="delete_account">Supprimer mon compte</string>
    <string name="user_deconnection">Etes-vous sûr de vouloir vous déconnecter ?</string>
    <string name="delete_account_confirmation">Etes-vous sûr de vouloir supprimer votre compte ?</string>
    <string name="delete_apiary_confirmation">Etes-vous sûr de vouloir supprimer ce rucher ?</string>
    <string name="delete_product_confirmation">Etes-vous sûr de vouloir supprimer ce produit ?</string>
    <string name="cancel">Annuler</string>
    <string name="delete">Supprimer</string>
    <string name="deconnection">Déconnexion</string>
    <string name="beehive">ruches</string>
    <string name="add">add</string>
    <string name="beehive_name">Nom de la ruche</string>
    <string name="beehive_type">Type de ruche - facultatif</string>
    <string name="beehive_details">Détails sur la ruche - facultatif</string>
    <string name="queen_info">Informations sur la reine</string>
    <string name="queen_year">Année de naissance</string>
    <string name="queen_origin">Origine</string>
    <string name="queen_lignee">Lignée</string>
    <string name="apiary_name">Nom du rucher</string>
    <string name="apiary_env">Environnement du rucher</string>
    <string name="queen_env_details">Forêt, Plaine, Bocage, etc…</string>
    <string name="description">Description</string>
    <string name="apiary_details">Détails sur le rucher</string>
    <string name="gps_coordinates">Coordonnées GPS</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="pin_on_maps">Situer sur la carte</string>
    <string name="back">back</string>
    <string name="edit">edit</string>
    <string name="see_on_maps"><![CDATA[Voir sur la carte >]]></string>
    <string name="add_beehive">add_beehive</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="optional">- facultatif</string>
    <string name="informations">informations</string>
    <string name="honey_super">hausses</string>
    <string name="qr_code_manager">qr_code_manager</string>
    <string name="pictures">Photos</string>
    <string name="picture">Photo</string>
    <string name="add_pictures">addPictures</string>
    <string name="add_honey_super">add_honey_super</string>
    <string name="visites">Visites</string>
    <string name="frame">cadres</string>
    <string name="visit_image">visit_image</string>
    <string name="add_honey_super_title">Ajouter une hausse</string>
    <string name="honey_super_name_hint">Nom de la hausse</string>
    <string name="frame_number_hint">Nombre de cadre</string>
    <string name="add_honey_super_button">Ajouter</string>
    <string name="cancel_honey_super_button">Annuler</string>
    <string name="details_beehive">Détails sur la ruche</string>
    <string name="type">Type</string>
    <string name="queen">Reine</string>
    <string name="product_image">Image du produit</string>
    <string name="product_name">Nom du produit</string>
    <string name="product_quantity">Quantité totale du produit (kg)</string>
    <string name="delete_beehive_confirmation">Êtes-vous sûr de vouloir supprimer cette ruche ?</string>
    <string name="visit_type">visit_type</string>
    <string name="visit_type_prompt">Type de visite</string>
    <string name="visit_type_image">visit_type_image</string>
    <string name="visit_reason_hint">Motif de la visite</string>
    <string name="other_visits">Autres visites</string>
    <string name="support_contact">Contacter le support</string>
</resources>