<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_market"
        android:name="com.uqac.beesness.ui.market.MarketFragment"
        android:label="@string/title_market"
        tools:layout="@layout/fragment_market" />

    <fragment
        android:id="@+id/navigation_apiaries"
        android:name="com.uqac.beesness.ui.apiaries.ApiariesFragment"
        android:label="@string/title_apiaries"
        tools:layout="@layout/fragment_apiaries" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.uqac.beesness.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.uqac.beesness.ui.stats.StatsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_plus"
        android:name="com.uqac.beesness.ui.plus.PlusFragment"
        android:label="@string/title_plus"
        tools:layout="@layout/fragment_plus" />

</navigation>