<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue"
    tools:context=".controller.AddBeehiveActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mainInfoAddRuche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dosis_book"
            android:text="@string/main_info"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/beehiveName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:backgroundTint="@color/white2"
            android:ems="13"
            android:fontFamily="@font/dosis_book"
            android:hint="@string/beehive_name"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white2"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/beehiveDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints=""
            android:backgroundTint="@color/white2"
            android:ems="13"
            android:fontFamily="@font/dosis_book"
            android:hint="@string/beehive_details"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white2"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/beehiveType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints=""
            android:backgroundTint="@color/white2"
            android:ems="13"
            android:fontFamily="@font/dosis_book"
            android:hint="@string/beehive_type"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white2"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/queenInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dosis_book"
                android:text="@string/queen_info"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/dosis_light"
                android:text="@string/optional"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/queenOrigin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:backgroundTint="@color/white2"
            android:ems="13"
            android:fontFamily="@font/dosis_book"
            android:hint="@string/queen_origin"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white2"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/queenLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints=""
            android:backgroundTint="@color/white2"
            android:ems="13"
            android:fontFamily="@font/dosis_book"
            android:hint="@string/queen_lignee"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white2"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/queenBirthYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints=""
            android:backgroundTint="@color/white2"
            android:ems="13"
            android:fontFamily="@font/dosis_book"
            android:hint="@string/queen_year"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white2"
            android:textSize="22sp" />
    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginBottom="35dp"
        android:backgroundTint="@color/main_yellow"
        android:fontFamily="@font/dosis_semibold"
        android:text="@string/save"
        android:textColor="@color/writing_color"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>