<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/action_bar_qr_code_scanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@android:color/transparent"
        android:contentDescription="@string/qr_code_scanner"
        android:src="@drawable/ic_baseline_qr_code_scanner_48" />


    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/logo_beesness"
        android:gravity="center_horizontal"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        app:srcCompat="@drawable/logo_beesness" />

    <ImageButton
        android:id="@+id/action_bar_more_vert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menu"
        android:src="@drawable/ic_baseline_more_vert_48" />

</TableRow>