<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue"
    tools:context=".controller.AddUpdateApiaryActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nameRucherTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dosis_book"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/apiaryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/white2"
            android:ems="13"
            android:fontFamily="@font/dosis_book"
            android:hint="@string/apiary_name"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white2"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rucherEnv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5sp"
                android:fontFamily="@font/dosis_book"
                android:text="@string/apiary_env"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dosis_light"
                android:text="@string/optional"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/apiaryEnvironmentDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/white2"
            android:ems="13"
            android:fontFamily="@font/dosis_book"
            android:hint="@string/queen_env_details"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white2"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rucherDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5sp"
                android:fontFamily="@font/dosis_book"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dosis_light"
                android:text="@string/optional"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/apiaryDescriptionDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/white2"
            android:ems="13"
            android:fontFamily="@font/dosis_book"
            android:hint="@string/apiary_details"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white2"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/coordonneesGpsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dosis_book"
            android:text="@string/gps_coordinates"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/white2"
            android:ems="13"
            android:fontFamily="@font/dosis_book"
            android:hint="@string/longitude"
            android:inputType="numberSigned|number|numberDecimal"
            android:textColor="@color/white"
            android:textColorHint="@color/white2"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/white2"
            android:ems="13"
            android:fontFamily="@font/dosis_book"
            android:hint="@string/latitude"
            android:inputType="numberSigned|number|numberDecimal"
            android:textColor="@color/white"
            android:textColorHint="@color/white2"
            android:textSize="22sp" />

        <Button
            android:id="@+id/situerCarteButton"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/dosis_semibold"
            android:text="@string/pin_on_maps"
            android:textColor="@color/writing_color"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/main_yellow"
        android:fontFamily="@font/dosis_semibold"
        android:text="@string/save"
        android:textColor="@color/writing_color"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>