<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/dosis_semibold"
        android:text="@string/connection"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailForLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:backgroundTint="#BEFFFFFF"
        android:ems="13"
        android:fontFamily="@font/dosis_book"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="#BEFFFFFF"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:backgroundTint="#BEFFFFFF"
        android:ems="13"
        android:fontFamily="@font/dosis_book"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="#BEFFFFFF"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailForLogin" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/dosis_medium"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/connection_button"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="115dp"
        android:backgroundTint="@color/main_yellow"
        android:fontFamily="@font/dosis_semibold"
        android:text="@string/connect"
        android:textColor="@color/writing_color"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/dosis_extralight"
        android:text="@string/no_account"
        android:textColor="#BFFFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/subscribe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connection_button" />

    <TextView
        android:id="@+id/subscribe"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/dosis_medium"
        android:gravity="center"
        android:text="@string/subscribe"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/connection_button" />
</androidx.constraintlayout.widget.ConstraintLayout>