<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/dosis_semibold"
        android:text="@string/forgotten_password"
        android:textColor="@color/writing_color"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:backgroundTint="@color/writing_color"
        android:ems="13"
        android:fontFamily="@font/dosis_book"
        android:hint="@string/email_or_username"
        android:inputType="textPersonName|textEmailAddress"
        android:textColor="@color/writing_color"
        android:textColorHint="@color/writing_color"
        android:textSize="22sp" />

    <Button
        android:id="@+id/send_link_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/main_blue"
        android:fontFamily="@font/dosis_book"
        android:text="@string/send_link"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp" />
</LinearLayout>